ignore sublime text files

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ ExportedObj/
 Icon?
 ehthumbs.db
 Thumbs.db
+
+
+# ================= #
+# Sublime generated #
+# ================= #
+*.sublime-project
+*.sublime-workspace
