Ignore assets/thirdparty

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Obj/
 UnityGenerated/
 Library/
 Thirdparty/
+Assets/Thirdparty/
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
