Add VSCode because I'm sick of downloading it everywhere, and new unity changes

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ UnityGenerated/
 Library/
 Thirdparty/
 Assets/Thirdparty/
+Assets/Thirdparty.meta
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
