--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ Assets/Thirdparty.meta
 # Visual Studio / MonoDevelop generated #
 # ===================================== #
 ExportedObj/
+*.vscode
 *.svd
 *.userprefs
 *.csproj
