--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Stateless" version="2.5.62.0" targetFramework="net35-unity subset v3.5" />
+  <package id="MonoStateless" version="2.5.29" targetFramework="net35-unity full v3.5" />
 </packages>
