Replace horses in chapter 2 with houses

--- a/Assets/Resources/Configuration/game_configuration.json
+++ b/Assets/Resources/Configuration/game_configuration.json
@@ -44,355 +44,338 @@
   },
   "maps" : {
     "ch1_drace_keep" : {
+      "background" : {
+        "previewURL" : "https://firebasestorage.googleapis.com/v0/b/tpqedit-staging.appspot.com/o/map_backgrounds%2Fch1_drace_keep?alt=media&token=b8f69dec-6449-4f83-a842-1da2880dd28e"
+      },
       "backgroundPath" : "map_backgrounds/ch1_drace_keep",
       "backgroundURL" : "https://firebasestorage.googleapis.com/v0/b/tpqedit-staging.appspot.com/o/map_backgrounds%2Fch1_drace_keep?alt=media&token=b8f69dec-6449-4f83-a842-1da2880dd28e",
       "createdOn" : 1477769926708,
       "displayName" : "Chapter 1: Drace Keep",
-      "height" : "25",
+      "height" : "26",
       "id" : "ch1_drace_keep",
       "obstructions" : {
-        "-KWs9B-SabqVZCNu90ye" : {
-          "x" : 13,
-          "y" : 2
-        },
-        "-KWs9F4GCVK-VHrbtz0S" : {
-          "x" : 13,
-          "y" : 3
-        },
-        "-KWs9FAjSHFV8h9Kcfpd" : {
-          "x" : 13,
-          "y" : 4
-        },
-        "-KWs9FKPIZ8I6u7qXXrD" : {
-          "x" : 13,
-          "y" : 5
-        },
-        "-KWs9FSUhnOkGAUN76Vx" : {
-          "x" : 13,
-          "y" : 6
-        },
-        "-KWs9F_o3dpktIYozQkf" : {
-          "x" : 13,
-          "y" : 7
-        },
-        "-KWs9FgaSCyVUKR4b7GS" : {
-          "x" : 13,
-          "y" : 8
-        },
-        "-KWs9FnMOOx4U0-VLhT6" : {
-          "x" : 13,
-          "y" : 9
-        },
-        "-KWs9FulAeWJupOHZGeN" : {
-          "x" : 13,
-          "y" : 10
-        },
-        "-KWs9G26SopPkdEKa0pB" : {
-          "x" : 13,
-          "y" : 12
-        },
-        "-KWs9G8JAlee29c1dBei" : {
-          "x" : 13,
-          "y" : 11
-        },
-        "-KWs9GM9oWBHHbwMoX0W" : {
+        "-KWszakIny1bcwyXC2UQ" : {
           "x" : 14,
-          "y" : 13
+          "y" : 23
         },
-        "-KWs9G_7oR7CJ4JkqRZw" : {
+        "-KWszavpQXBJ9rb9C_3X" : {
+          "x" : 13,
+          "y" : 22
+        },
+        "-KWszb88f-vkMV-1aRCB" : {
           "x" : 15,
-          "y" : 13
+          "y" : 23
         },
-        "-KWs9GlKODGvy0DhMyvH" : {
+        "-KWszbOU1UFY7J0A6ciS" : {
           "x" : 16,
-          "y" : 14
+          "y" : 23
         },
-        "-KWs9HTkthhNdq-iKvMI" : {
+        "-KWszbVWU5hY4adbpzvI" : {
           "x" : 17,
-          "y" : 15
+          "y" : 23
         },
-        "-KWs9Ho2lgVoC041MvS8" : {
-          "x" : 17,
-          "y" : 16
-        },
-        "-KWs9I2G68CtxThxWeJw" : {
-          "x" : 17,
-          "y" : 17
-        },
-        "-KWs9IAEJEvm4j2G0-B1" : {
+        "-KWszb_ykCJjUA03ysBc" : {
           "x" : 18,
-          "y" : 17
+          "y" : 23
         },
-        "-KWs9IG1RDzTmr3M44ZC" : {
+        "-KWszbrl3NI1h2NR9ygX" : {
           "x" : 19,
-          "y" : 17
+          "y" : 23
         },
-        "-KWs9IXmaB5bi6LNi86Y" : {
+        "-KWszby5MS6yClKQNRNR" : {
+          "x" : 20,
+          "y" : 22
+        },
+        "-KWszc6lHv98pBZnF9Hc" : {
+          "x" : 20,
+          "y" : 21
+        },
+        "-KWszcCn_n4zyk8V_X9i" : {
+          "x" : 20,
+          "y" : 20
+        },
+        "-KWszcMEhIAhikkUNv3F" : {
+          "x" : 20,
+          "y" : 19
+        },
+        "-KWszc_bzzVngG9ZRi2X" : {
+          "x" : 13,
+          "y" : 21
+        },
+        "-KWszcjHp6XrED0m1Zvk" : {
+          "x" : 13,
+          "y" : 20
+        },
+        "-KWszco2ozkmA7ELIqLF" : {
+          "x" : 13,
+          "y" : 19
+        },
+        "-KWszcuJRlT44K2GiBRP" : {
+          "x" : 13,
+          "y" : 18
+        },
+        "-KWszdPozc1Es_IJarCb" : {
           "x" : 20,
           "y" : 17
         },
-        "-KWs9Ik97qJNK1n0HsEq" : {
-          "x" : 21,
-          "y" : 17
+        "-KWszdUKQywErdNjIXkG" : {
+          "x" : 20,
+          "y" : 18
         },
-        "-KWs9J7Jkd5siut9xls5" : {
-          "x" : 22,
-          "y" : 17
-        },
-        "-KWs9JKbAV4OhYUyGJEB" : {
-          "x" : 23,
-          "y" : 17
-        },
-        "-KWs9JWiqgxnW9pkSBC7" : {
-          "x" : 25,
-          "y" : 17
-        },
-        "-KWs9JjeKoa4xR788olN" : {
-          "x" : 24,
-          "y" : 17
-        },
-        "-KWs9Jq35Jv90qRNimNO" : {
-          "x" : 26,
-          "y" : 17
-        },
-        "-KWs9K0k5A8YwUVx36v-" : {
-          "x" : 27,
-          "y" : 17
-        },
-        "-KWs9K6IXq5KYqtW-dhs" : {
-          "x" : 28,
-          "y" : 17
-        },
-        "-KWs9KHPtkxhjwPUUH6j" : {
-          "x" : 29,
-          "y" : 17
-        },
-        "-KWs9KQ97p0Apz6sd6N-" : {
-          "x" : 30,
-          "y" : 17
-        },
-        "-KWs9Koy1CMbdME7Et1y" : {
-          "x" : 32,
-          "y" : 17
-        },
-        "-KWs9KwKAqLlIvtTc9ej" : {
-          "x" : 31,
-          "y" : 17
-        },
-        "-KWs9L78nBX4KZbn8pZF" : {
-          "x" : 33,
-          "y" : 17
-        },
-        "-KWs9LD8xQolSoj6dTXC" : {
-          "x" : 34,
-          "y" : 17
-        },
-        "-KWs9LOnngglGQ3Bvkd9" : {
-          "x" : 35,
-          "y" : 17
-        },
-        "-KWs9LjJILEYDlI1fSFr" : {
-          "x" : 36,
-          "y" : 17
-        },
-        "-KWs9M0_VN_LKc-3toKE" : {
-          "x" : 37,
-          "y" : 17
-        },
-        "-KWs9MEjxliQIaoCyNSe" : {
-          "x" : 38,
-          "y" : 17
-        },
-        "-KWs9MPd31DV7ReMpkI5" : {
-          "x" : 39,
-          "y" : 17
-        },
-        "-KWs9MV8Z_CTyYJD2sPv" : {
-          "x" : 40,
-          "y" : 17
-        },
-        "-KWs9M_aBILZ9og1cYVO" : {
-          "x" : 41,
-          "y" : 17
-        },
-        "-KWs9MhoTnXmGNm8CQM0" : {
-          "x" : 42,
-          "y" : 17
-        },
-        "-KWs9MpOKtHWJMLOOcZ4" : {
-          "x" : 42,
+        "-KWszdaHLdT0WzWBMZtt" : {
+          "x" : 20,
           "y" : 16
         },
-        "-KWs9MvrXS4dvx0qqWuT" : {
-          "x" : 42,
+        "-KWszdg79S-5Pp6pkBrL" : {
+          "x" : 20,
           "y" : 15
         },
-        "-KWs9N1jwlHFWa5yhxgO" : {
-          "x" : 42,
+        "-KWszdrOcL483-M7epBz" : {
+          "x" : 20,
           "y" : 14
         },
-        "-KWs9N7OaYrkOjYoBCal" : {
-          "x" : 42,
+        "-KWszdyJwp3aBPbIUMFr" : {
+          "x" : 20,
           "y" : 13
         },
-        "-KWs9NCjCyUSNqyDyQY2" : {
-          "x" : 42,
+        "-KWszeAkJgilLXhcVUa4" : {
+          "x" : 13,
+          "y" : 17
+        },
+        "-KWszeGEk5-VRvZgmrXB" : {
+          "x" : 13,
+          "y" : 16
+        },
+        "-KWszeLcBxdUAK3yIV-G" : {
+          "x" : 13,
+          "y" : 15
+        },
+        "-KWszeRg658qk88Les48" : {
+          "x" : 13,
+          "y" : 14
+        },
+        "-KWszf039uPa6Xximg73" : {
+          "x" : 13,
+          "y" : 13
+        },
+        "-KWszf5jSgcvZJ8MtM5o" : {
+          "x" : 14,
           "y" : 12
         },
-        "-KWs9NJ6mhJLsoT5a0j4" : {
-          "x" : 42,
-          "y" : 10
-        },
-        "-KWs9NUWTn8O23QNIxgy" : {
-          "x" : 42,
+        "-KWszfjxhvgWI1NEyY2U" : {
+          "x" : 16,
           "y" : 11
         },
-        "-KWs9NaRbSxfH1BUZvLn" : {
-          "x" : 42,
+        "-KWszfpjRmfPIThSet_8" : {
+          "x" : 15,
+          "y" : 12
+        },
+        "-KWszghrOXMD3gt6hLlr" : {
+          "x" : 17,
+          "y" : 10
+        },
+        "-KWszh0OOls5mDDkKbaz" : {
+          "x" : 17,
           "y" : 9
         },
-        "-KWs9Nm0WhcHrBGo3hxV" : {
-          "x" : 42,
+        "-KWszhBF7dex_TXcbtYE" : {
+          "x" : 18,
           "y" : 8
         },
-        "-KWs9NsPXsiz6f-W8rzw" : {
-          "x" : 41,
+        "-KWsziOLKcafgQy6YwFZ" : {
+          "x" : 19,
           "y" : 8
         },
-        "-KWs9NzcX1jM-RR-v5Zp" : {
-          "x" : 40,
+        "-KWsziXq-8arlbHFfJHU" : {
+          "x" : 20,
           "y" : 8
         },
-        "-KWs9O5gqnLjqtLVbxpn" : {
-          "x" : 39,
-          "y" : 8
-        },
-        "-KWs9OEOHdAcVl1tDniU" : {
-          "x" : 38,
-          "y" : 8
-        },
-        "-KWs9OP9zLKgSexPBxyL" : {
-          "x" : 37,
-          "y" : 8
-        },
-        "-KWs9OaDc_gcYOqU_FZb" : {
-          "x" : 36,
-          "y" : 8
-        },
-        "-KWs9OjF4PnhTxz4zvu6" : {
-          "x" : 35,
-          "y" : 8
-        },
-        "-KWs9OrIX0vEyP6Xk0HM" : {
-          "x" : 34,
-          "y" : 8
-        },
-        "-KWs9P7fRYsm7HtF7rmF" : {
-          "x" : 33,
-          "y" : 8
-        },
-        "-KWs9PJ_SfVHZdZ22_rY" : {
-          "x" : 32,
-          "y" : 8
-        },
-        "-KWs9PQSnADmONmff3I9" : {
-          "x" : 31,
-          "y" : 8
-        },
-        "-KWs9PXyYPHIY8w5b1Tw" : {
-          "x" : 30,
-          "y" : 8
-        },
-        "-KWs9Pfs2zSNDpYmgxeM" : {
-          "x" : 29,
-          "y" : 8
-        },
-        "-KWs9Pn_Jr_nll8-4PgL" : {
-          "x" : 28,
-          "y" : 8
-        },
-        "-KWs9PzjphV1JdcxeaJf" : {
-          "x" : 27,
-          "y" : 8
-        },
-        "-KWs9Q6ujR3AIZiUVorY" : {
-          "x" : 26,
-          "y" : 8
-        },
-        "-KWs9QGuq9Fu9P16DZXH" : {
-          "x" : 24,
-          "y" : 8
-        },
-        "-KWs9QZWbLWjaLSz1nVw" : {
-          "x" : 25,
-          "y" : 8
-        },
-        "-KWs9Qow8vqpUbsd8Js6" : {
-          "x" : 23,
-          "y" : 8
-        },
-        "-KWs9QwIQQ7nuttUXXr3" : {
-          "x" : 22,
-          "y" : 8
-        },
-        "-KWs9R2ZtriboHl6FAiA" : {
+        "-KWszidibWcleS6zp4uE" : {
           "x" : 21,
           "y" : 8
         },
-        "-KWs9RDJKfLyMJ1lLj4-" : {
-          "x" : 20,
+        "-KWsziiygi5RESsEMRIo" : {
+          "x" : 22,
           "y" : 8
         },
-        "-KWs9RIOHAqju8pxpXPR" : {
-          "x" : 20,
-          "y" : 7
+        "-KWsziotnrRrZPGBscbz" : {
+          "x" : 23,
+          "y" : 8
         },
-        "-KWs9RUuL7V8mTy1CCf9" : {
-          "x" : 20,
-          "y" : 6
+        "-KWszixSLWhI46HT98mn" : {
+          "x" : 24,
+          "y" : 8
         },
-        "-KWs9RruEMrANMHhJzeo" : {
-          "x" : 20,
-          "y" : 5
+        "-KWszj8EoMFksWUVG93V" : {
+          "x" : 25,
+          "y" : 8
         },
-        "-KWs9RxbVEh5Cwq1QEfL" : {
-          "x" : 20,
-          "y" : 4
+        "-KWszjDTCSlCwS_M19FC" : {
+          "x" : 26,
+          "y" : 8
         },
-        "-KWs9S3v-l1xBESiw6U8" : {
-          "x" : 20,
-          "y" : 3
+        "-KWszjJ87OijKaAWqU4I" : {
+          "x" : 27,
+          "y" : 8
         },
-        "-KWs9SATJ-xZSngjRcy2" : {
-          "x" : 20,
-          "y" : 2
+        "-KWszjm4Vnvud0vQ6Sw6" : {
+          "x" : 28,
+          "y" : 8
         },
-        "-KWs9Sng3_xQCdCfBfrh" : {
-          "x" : 14,
-          "y" : 2
+        "-KWszk0BiCOpXd19yF5T" : {
+          "x" : 30,
+          "y" : 8
         },
-        "-KWs9SwoyN8jsmS1UdnB" : {
-          "x" : 16,
-          "y" : 2
+        "-KWszkIb2DSRncS-S9qe" : {
+          "x" : 29,
+          "y" : 8
         },
-        "-KWs9T4STtLYOimKEZG9" : {
-          "x" : 15,
-          "y" : 2
+        "-KWszkRWgp4nlP5XLZmc" : {
+          "x" : 31,
+          "y" : 8
         },
-        "-KWs9Te9PPCmX7ekoixv" : {
-          "x" : 18,
-          "y" : 2
+        "-KWszkcu65P2NIpuzqde" : {
+          "x" : 32,
+          "y" : 8
         },
-        "-KWs9TnkJxApOYS3N2q4" : {
-          "x" : 19,
-          "y" : 2
+        "-KWszkhONK7w9BTdUWI8" : {
+          "x" : 33,
+          "y" : 8
         },
-        "-KWs9TyEEh1wdO7UaeXA" : {
-          "x" : 17,
-          "y" : 2
+        "-KWszkocoWNMoE4ytqbo" : {
+          "x" : 34,
+          "y" : 8
+        },
+        "-KWszkuip2XWGaVu7RFX" : {
+          "x" : 36,
+          "y" : 8
+        },
+        "-KWszl7Ivvd8kSBupkPW" : {
+          "x" : 35,
+          "y" : 8
+        },
+        "-KWszlE6-004eqyg7VIy" : {
+          "x" : 37,
+          "y" : 8
+        },
+        "-KWszlRQwN8y5nQqZS7x" : {
+          "x" : 38,
+          "y" : 8
+        },
+        "-KWszlYYd8BKJRcsxhJL" : {
+          "x" : 39,
+          "y" : 8
+        },
+        "-KWszlhl-e6PVmhksVW3" : {
+          "x" : 40,
+          "y" : 8
+        },
+        "-KWszlwqnKZ2mAwktjYy" : {
+          "x" : 41,
+          "y" : 8
+        },
+        "-KWszmBdkgtb0ayN1CPX" : {
+          "x" : 42,
+          "y" : 9
+        },
+        "-KWszmLZsgkFXU8uL10h" : {
+          "x" : 42,
+          "y" : 10
+        },
+        "-KWszmRKvkfIbCcVHDrc" : {
+          "x" : 42,
+          "y" : 11
+        },
+        "-KWszmXLn-FEp4s6CJ3u" : {
+          "x" : 42,
+          "y" : 12
+        },
+        "-KWszmhHAcltHjyZtJLX" : {
+          "x" : 41,
+          "y" : 13
+        },
+        "-KWszmoOkWrQuVcBfo96" : {
+          "x" : 40,
+          "y" : 13
+        },
+        "-KWszmvFXNL4HWzvyX10" : {
+          "x" : 39,
+          "y" : 13
+        },
+        "-KWsznCfXP9f8vCkntLV" : {
+          "x" : 38,
+          "y" : 13
+        },
+        "-KWsznNEfHsSkJ9ovsb6" : {
+          "x" : 37,
+          "y" : 13
+        },
+        "-KWsznUBDG5UMVviG1H6" : {
+          "x" : 36,
+          "y" : 13
+        },
+        "-KWsznbFtdWEyLcgNsBL" : {
+          "x" : 35,
+          "y" : 13
+        },
+        "-KWsznmk-BExhRTKzTOy" : {
+          "x" : 34,
+          "y" : 13
+        },
+        "-KWsznt_yJynzi88Gv5D" : {
+          "x" : 33,
+          "y" : 13
+        },
+        "-KWszo36cTfcnivrRR8m" : {
+          "x" : 32,
+          "y" : 13
+        },
+        "-KWszoBw_LoU15-SCDWU" : {
+          "x" : 31,
+          "y" : 13
+        },
+        "-KWszoJhpkJmBTe8zDyF" : {
+          "x" : 30,
+          "y" : 13
+        },
+        "-KWszoRiBL5jhDJG_r-R" : {
+          "x" : 29,
+          "y" : 13
+        },
+        "-KWszoeNsi0MNML1MfZH" : {
+          "x" : 28,
+          "y" : 13
+        },
+        "-KWszoj0-sQW8Jh9XHn-" : {
+          "x" : 26,
+          "y" : 13
+        },
+        "-KWszopeU0ZfLtkKhBiy" : {
+          "x" : 27,
+          "y" : 13
+        },
+        "-KWszow5gQJXJI6hvrdq" : {
+          "x" : 24,
+          "y" : 13
+        },
+        "-KWszp1xX8kP1uXPDCnC" : {
+          "x" : 25,
+          "y" : 13
+        },
+        "-KWszpPWWwL3Slyscrq3" : {
+          "x" : 22,
+          "y" : 13
+        },
+        "-KWszpX30g_AhARtX4jH" : {
+          "x" : 21,
+          "y" : 13
+        },
+        "-KWszpdwiLUgxg10JB8h" : {
+          "x" : 23,
+          "y" : 13
         }
       },
-      "width" : "46"
+      "width" : "45"
     }
   }
 }
