Update config to get chapter 2 obstructions

--- a/Assets/Resources/Configuration/game_configuration.json
+++ b/Assets/Resources/Configuration/game_configuration.json
@@ -130,14 +130,6 @@
           "x" : 20,
           "y" : 15
         },
-        "-KWszdrOcL483-M7epBz" : {
-          "x" : 20,
-          "y" : 14
-        },
-        "-KWszdyJwp3aBPbIUMFr" : {
-          "x" : 20,
-          "y" : 13
-        },
         "-KWszeAkJgilLXhcVUa4" : {
           "x" : 13,
           "y" : 17
@@ -373,9 +365,584 @@
         "-KWszpdwiLUgxg10JB8h" : {
           "x" : 23,
           "y" : 13
+        },
+        "-KWt-F4HL1zFgpLL0Iwo" : {
+          "x" : 20,
+          "y" : 14
+        },
+        "-KWt-FB5v8CpRuswFMHC" : {
+          "x" : 20,
+          "y" : 13
         }
       },
       "width" : "45"
+    },
+    "ch2_eastmere_plaza" : {
+      "backgroundPath" : "map_backgrounds/ch2_eastmere_plaza",
+      "backgroundURL" : "https://firebasestorage.googleapis.com/v0/b/tpqedit-staging.appspot.com/o/map_backgrounds%2Fch2_eastmere_plaza?alt=media&token=5893ef3b-a2fa-433b-9e33-72b3d9f33038",
+      "createdOn" : 1479500023318,
+      "displayName" : "Chapter 2: Eastmere Plaza",
+      "height" : "26",
+      "id" : "ch2_eastmere_plaza",
+      "obstructions" : {
+        "-KWt3koO-yI4ovjW7uPa" : {
+          "x" : 6,
+          "y" : 16
+        },
+        "-KWt3lWNxDOJOlz7aGqz" : {
+          "x" : 8,
+          "y" : 18
+        },
+        "-KWt3ldYdfbEG2ObpNfb" : {
+          "x" : 7,
+          "y" : 17
+        },
+        "-KWt3lq4rmW-82cwDpvE" : {
+          "x" : 8,
+          "y" : 19
+        },
+        "-KWt3mEnSuf8vMYAJ59V" : {
+          "x" : 12,
+          "y" : 19
+        },
+        "-KWt3mKqGfqtredZyjJY" : {
+          "x" : 12,
+          "y" : 18
+        },
+        "-KWt3mSnAmrCPObG-8pz" : {
+          "x" : 13,
+          "y" : 18
+        },
+        "-KWt3maNaYLBaIQzHz8_" : {
+          "x" : 14,
+          "y" : 18
+        },
+        "-KWt3mlI1MGyNHru6pj5" : {
+          "x" : 14,
+          "y" : 19
+        },
+        "-KWt3nBhZlritGrqRdiO" : {
+          "x" : 18,
+          "y" : 19
+        },
+        "-KWt3nI1Ta-ToNLas3fv" : {
+          "x" : 18,
+          "y" : 18
+        },
+        "-KWt3nOPWV_5AdJANKiC" : {
+          "x" : 19,
+          "y" : 17
+        },
+        "-KWt3nYQQ6UO8GEnjpJ7" : {
+          "x" : 20,
+          "y" : 17
+        },
+        "-KWt3nqMr9-MdZ_O86Sj" : {
+          "x" : 20,
+          "y" : 14
+        },
+        "-KWt3nyP0_Y7Ctm85s-B" : {
+          "x" : 17,
+          "y" : 15
+        },
+        "-KWt3oKE5XIUBMnWHbUP" : {
+          "x" : 13,
+          "y" : 16
+        },
+        "-KWt3oQVsrhh2vaIGBbD" : {
+          "x" : 14,
+          "y" : 16
+        },
+        "-KWt3oWfPHubp7ouXle0" : {
+          "x" : 15,
+          "y" : 16
+        },
+        "-KWt3oc16_UjrMMT58Xd" : {
+          "x" : 16,
+          "y" : 16
+        },
+        "-KWt3pECaWRUsTtt4Wxd" : {
+          "x" : 15,
+          "y" : 13
+        },
+        "-KWt3pP2OBQ3n7YVVhWb" : {
+          "x" : 14,
+          "y" : 13
+        },
+        "-KWt3qoplQ3c28gZBDAh" : {
+          "x" : 13,
+          "y" : 13
+        },
+        "-KWt3rA1jcnrW9Ij_exc" : {
+          "x" : 11,
+          "y" : 14
+        },
+        "-KWt3rLG-xfUPnubzrCV" : {
+          "x" : 12,
+          "y" : 13
+        },
+        "-KWt3rRUeAXa6arzaW-V" : {
+          "x" : 12,
+          "y" : 12
+        },
+        "-KWt3reJ2jhs9yjIa47J" : {
+          "x" : 11,
+          "y" : 15
+        },
+        "-KWt3rkBcVQclUJPS7cR" : {
+          "x" : 11,
+          "y" : 16
+        },
+        "-KWt3s-1rG1CCZO6B3-o" : {
+          "x" : 12,
+          "y" : 16
+        },
+        "-KWt3t5no58zNeduj8J7" : {
+          "x" : 18,
+          "y" : 14
+        },
+        "-KWt3tH8EDgk3tIf0BmI" : {
+          "x" : 18,
+          "y" : 13
+        },
+        "-KWt3tQvU_J4KZJk4g5D" : {
+          "x" : 17,
+          "y" : 12
+        },
+        "-KWt3teEaFks9xbRRQZm" : {
+          "x" : 16,
+          "y" : 12
+        },
+        "-KWt3uZf4kKCVme0ROhK" : {
+          "x" : 20,
+          "y" : 10
+        },
+        "-KWt3urHViRrXWjl_9MV" : {
+          "x" : 17,
+          "y" : 9
+        },
+        "-KWt3uxmbL6iK7ij0UtX" : {
+          "x" : 18,
+          "y" : 9
+        },
+        "-KWt3v5qs4LxHLjOINLg" : {
+          "x" : 16,
+          "y" : 10
+        },
+        "-KWt3vBxHWZ6rMfUCFAx" : {
+          "x" : 15,
+          "y" : 10
+        },
+        "-KWt3vftiZn_dc8PkYHM" : {
+          "x" : 6,
+          "y" : 10
+        },
+        "-KWt3vumxsVISwLPVHkG" : {
+          "x" : 7,
+          "y" : 10
+        },
+        "-KWt3wAghiWJV6O-GFXP" : {
+          "x" : 8,
+          "y" : 11
+        },
+        "-KWt3wHqLCsHUJNmRb_G" : {
+          "x" : 9,
+          "y" : 11
+        },
+        "-KWt3wO3_HQAOL063Equ" : {
+          "x" : 10,
+          "y" : 11
+        },
+        "-KWt3wUl6AbH2JKgHWYV" : {
+          "x" : 10,
+          "y" : 10
+        },
+        "-KWt3x2tBPmrBnEJbCjo" : {
+          "x" : 11,
+          "y" : 9
+        },
+        "-KWt3xPPka8oqrvs9qM7" : {
+          "x" : 13,
+          "y" : 9
+        },
+        "-KWt3xVbObRzbK1-DHwv" : {
+          "x" : 12,
+          "y" : 9
+        },
+        "-KWt3xdBtwfmlmo4BXNj" : {
+          "x" : 14,
+          "y" : 9
+        },
+        "-KWt3y1d-_3BkZ1Ig5bE" : {
+          "x" : 5,
+          "y" : 11
+        },
+        "-KWt3yILMJAM-4dOD2w9" : {
+          "x" : 5,
+          "y" : 12
+        },
+        "-KWt3yYsGy0nc7mZMyc2" : {
+          "x" : 5,
+          "y" : 14
+        },
+        "-KWt3ye1njUeyUFyXzkw" : {
+          "x" : 5,
+          "y" : 15
+        },
+        "-KWt3z-4FqJOl-IFYykw" : {
+          "x" : 9,
+          "y" : 20
+        },
+        "-KWt3z5xsWsPDCOnowgx" : {
+          "x" : 10,
+          "y" : 20
+        },
+        "-KWt4-44jdYZoBcseGS_" : {
+          "x" : 11,
+          "y" : 19
+        },
+        "-KWt4-RXC9DP7XfY15PA" : {
+          "x" : 15,
+          "y" : 20
+        },
+        "-KWt4-X2YrLx1GRF359I" : {
+          "x" : 16,
+          "y" : 20
+        },
+        "-KWt4-e8DRyJ7pieo6Mu" : {
+          "x" : 17,
+          "y" : 20
+        },
+        "-KWt40X3ZGMbO16PkMCK" : {
+          "x" : 21,
+          "y" : 17
+        },
+        "-KWt40cbgUHShZpsj051" : {
+          "x" : 22,
+          "y" : 17
+        },
+        "-KWt40lFrYn6zp3uGI89" : {
+          "x" : 22,
+          "y" : 18
+        },
+        "-KWt41JCmw05Ftmx65yt" : {
+          "x" : 23,
+          "y" : 19
+        },
+        "-KWt41R-_5hVtnto546G" : {
+          "x" : 24,
+          "y" : 19
+        },
+        "-KWt41uW2GQJx0_I0ZJD" : {
+          "x" : 21,
+          "y" : 14
+        },
+        "-KWt422VnwVl0s7r2oTy" : {
+          "x" : 22,
+          "y" : 14
+        },
+        "-KWt42GlRkvfWzx_M0wA" : {
+          "x" : 22,
+          "y" : 13
+        },
+        "-KWt42M5V-T8vJrmTar8" : {
+          "x" : 22,
+          "y" : 12
+        },
+        "-KWt42RZxR9Ui6p_cucs" : {
+          "x" : 21,
+          "y" : 12
+        },
+        "-KWt42WhCnrWTfCq_zcB" : {
+          "x" : 21,
+          "y" : 13
+        },
+        "-KWt42dwXCXa8Z7q_wkI" : {
+          "x" : 21,
+          "y" : 11
+        },
+        "-KWt432Y2oC_DxZNrt-C" : {
+          "x" : 19,
+          "y" : 9
+        },
+        "-KWt43frrHjkpOHFZFg1" : {
+          "x" : 23,
+          "y" : 11
+        },
+        "-KWt43qO5sr5YoCraotJ" : {
+          "x" : 24,
+          "y" : 11
+        },
+        "-KWt43wSwY0z_ubWd4kT" : {
+          "x" : 25,
+          "y" : 11
+        },
+        "-KWt44KEOva-s582UfWX" : {
+          "x" : 27,
+          "y" : 11
+        },
+        "-KWt44U7PAhx2YvnCV7m" : {
+          "x" : 26,
+          "y" : 11
+        },
+        "-KWt44_SSB1UwmjTC7lo" : {
+          "x" : 28,
+          "y" : 11
+        },
+        "-KWt44fPTHLHhO4L7Nir" : {
+          "x" : 29,
+          "y" : 11
+        },
+        "-KWt44lILvzIkRlBPKq-" : {
+          "x" : 30,
+          "y" : 11
+        },
+        "-KWt44tu9GwAzdU0nhLk" : {
+          "x" : 31,
+          "y" : 11
+        },
+        "-KWt45-rH4eKqucj-O2b" : {
+          "x" : 32,
+          "y" : 11
+        },
+        "-KWt458wI-ClY9RujYv7" : {
+          "x" : 33,
+          "y" : 11
+        },
+        "-KWt45EbyqP9KymDip-Q" : {
+          "x" : 34,
+          "y" : 11
+        },
+        "-KWt45LCiWzd9jamu2uP" : {
+          "x" : 35,
+          "y" : 11
+        },
+        "-KWt45TGlAc9kxvjTycm" : {
+          "x" : 36,
+          "y" : 11
+        },
+        "-KWt45Z8UbOa-YSlElPB" : {
+          "x" : 37,
+          "y" : 11
+        },
+        "-KWt45hfb6uRIKu2z8_q" : {
+          "x" : 38,
+          "y" : 12
+        },
+        "-KWt46IBiFGkf3dUbK5m" : {
+          "x" : 38,
+          "y" : 14
+        },
+        "-KWt46OF3GonGm_ccbOt" : {
+          "x" : 38,
+          "y" : 15
+        },
+        "-KWt46Ud_HnZUgQvOYYj" : {
+          "x" : 38,
+          "y" : 16
+        },
+        "-KWt46_tCMwVeSHx3PA5" : {
+          "x" : 38,
+          "y" : 17
+        },
+        "-KWt46g815UgMRX2j7uH" : {
+          "x" : 38,
+          "y" : 18
+        },
+        "-KWt46p95PfcTo0eWATp" : {
+          "x" : 38,
+          "y" : 19
+        },
+        "-KWt474zrVWDtZbHx_Io" : {
+          "x" : 37,
+          "y" : 20
+        },
+        "-KWt47_yO214o1kElnyY" : {
+          "x" : 36,
+          "y" : 20
+        },
+        "-KWt47njLs_WEQdlUR3D" : {
+          "x" : 35,
+          "y" : 20
+        },
+        "-KWt48B9loSAloid3x1u" : {
+          "x" : 34,
+          "y" : 20
+        },
+        "-KWt48e4wo6-FuKMBe_n" : {
+          "x" : 32,
+          "y" : 19
+        },
+        "-KWt492jklxoYBcfJffz" : {
+          "x" : 33,
+          "y" : 20
+        },
+        "-KWt49CTuKQp95EHFj9r" : {
+          "x" : 31,
+          "y" : 20
+        },
+        "-KWt49X1ExGP9Gycmahr" : {
+          "x" : 30,
+          "y" : 20
+        },
+        "-KWt49gx7OIGEtiXWNDW" : {
+          "x" : 29,
+          "y" : 20
+        },
+        "-KWt49xbfJSYjjcDbU7t" : {
+          "x" : 28,
+          "y" : 20
+        },
+        "-KWt4APukQJbOdUVf5fy" : {
+          "x" : 26,
+          "y" : 20
+        },
+        "-KWt4AaH8TioZ7e2iX0P" : {
+          "x" : 27,
+          "y" : 20
+        },
+        "-KWt4AmBfJYZDVHJ1GD9" : {
+          "x" : 25,
+          "y" : 20
+        },
+        "-KWt4B9xUazf1OM1a1hn" : {
+          "x" : 25,
+          "y" : 17
+        },
+        "-KWt4BUi4Zj0UCXR6l_Z" : {
+          "x" : 25,
+          "y" : 15
+        },
+        "-KWt4BahPNFTlBxbzucE" : {
+          "x" : 25,
+          "y" : 16
+        },
+        "-KWt4BhO4jmcJNiMiUwB" : {
+          "x" : 25,
+          "y" : 14
+        },
+        "-KWt4BoQAfw1ifR5s841" : {
+          "x" : 25,
+          "y" : 13
+        },
+        "-KWt4Bt-vrnsIKNjUuvm" : {
+          "x" : 26,
+          "y" : 13
+        },
+        "-KWt4BzumiMarWdbNpZB" : {
+          "x" : 27,
+          "y" : 13
+        },
+        "-KWt4C7AdVjmaRjq0W4s" : {
+          "x" : 28,
+          "y" : 13
+        },
+        "-KWt4CCWOcd5AQ4LrhUa" : {
+          "x" : 29,
+          "y" : 13
+        },
+        "-KWt4CIk2WXhikhr4lqw" : {
+          "x" : 29,
+          "y" : 14
+        },
+        "-KWt4CSDujgfR_hziXAq" : {
+          "x" : 29,
+          "y" : 15
+        },
+        "-KWt4CXH5Eq1BIAruEJQ" : {
+          "x" : 29,
+          "y" : 16
+        },
+        "-KWt4Cbja0t-8JM6m05y" : {
+          "x" : 29,
+          "y" : 17
+        },
+        "-KWt4CiLaYmnGry-KRiS" : {
+          "x" : 28,
+          "y" : 17
+        },
+        "-KWt4CoHdNeIhfLt_Nuq" : {
+          "x" : 27,
+          "y" : 17
+        },
+        "-KWt4Cu3tZv4bdirhG3T" : {
+          "x" : 26,
+          "y" : 17
+        },
+        "-KWt4D0lP-cONLcEA1BL" : {
+          "x" : 31,
+          "y" : 17
+        },
+        "-KWt4D5zYhfui-nQJAFQ" : {
+          "x" : 32,
+          "y" : 17
+        },
+        "-KWt4DBaEMOJZ1eo6WRl" : {
+          "x" : 33,
+          "y" : 17
+        },
+        "-KWt4DH3eDWrxvWcIwFY" : {
+          "x" : 34,
+          "y" : 17
+        },
+        "-KWt4DMVVR5btWyVAJ4m" : {
+          "x" : 35,
+          "y" : 17
+        },
+        "-KWt4DSnmANknINto1UQ" : {
+          "x" : 35,
+          "y" : 16
+        },
+        "-KWt4DYQbQPnkxoJBGfX" : {
+          "x" : 35,
+          "y" : 15
+        },
+        "-KWt4De196l87nlmzIAf" : {
+          "x" : 35,
+          "y" : 14
+        },
+        "-KWt4DkXkfOLuWnAQvJV" : {
+          "x" : 35,
+          "y" : 13
+        },
+        "-KWt4E2pxBdfKru2t4ee" : {
+          "x" : 33,
+          "y" : 13
+        },
+        "-KWt4E72vH2RgA6ZaNR9" : {
+          "x" : 34,
+          "y" : 13
+        },
+        "-KWt4EFnjAyMcEeMWWBb" : {
+          "x" : 32,
+          "y" : 13
+        },
+        "-KWt4EPMgwf80S5G0Z5e" : {
+          "x" : 31,
+          "y" : 13
+        },
+        "-KWt4E_y9wxTGhvIEN98" : {
+          "x" : 31,
+          "y" : 14
+        },
+        "-KWt4Ef_g3aOUPxhryIB" : {
+          "x" : 31,
+          "y" : 15
+        },
+        "-KWt4ElZlApAc0CW-_ha" : {
+          "x" : 31,
+          "y" : 16
+        },
+        "-KWt4Iv8LDszvvB5_6UT" : {
+          "x" : 5,
+          "y" : 13
+        },
+        "-KWt4Jj2sQCQDaJuVr2c" : {
+          "x" : 38,
+          "y" : 13
+        }
+      },
+      "width" : "42"
     }
   }
 }
